style.css
body{
 margin:0;
font-family:Arial;
background:linear-gradient(135deg,#0f172a,#1e293b);
color:white;
}

header{
text-align:center;
padding:20px;
font-size:40px;
background:rgba(0,0,0,0.4);
color:#00ff88;
}




/* il wallet scritto cosi' serve per prendere solo quell'elemento */
#wallet{
position:fixed;
top:10px;
left:10px;
background:rgba(0,0,0,0.85);
padding:10px 15px;
border-radius:10px;
color:#00ff88;
font-weight:bold;
z-index:2000;
}





/* menu */
.dropdown{
position:fixed;
top:10px;
right:10px;
z-index:3000;
}

.dropbtn{
background:#00ff88;
border:none;
padding:10px;
border-radius:8px;
font-weight:bold;
cursor:pointer;
}

.dropdown-content{
display:none;
position:absolute;
right:0;
background:#111;
min-width:180px;
border-radius:10px;
overflow:hidden;
}

.dropdown-content button{
width:100%;
padding:10px;
border:none;
background:#111;
color:white;
cursor:pointer;
text-align:left;
}

.dropdown-content button:hover{
background:#00ff88;
color:black;
}

.dropdown:hover .dropdown-content{
display:block;
}




/* bonus */
#bonusBox{
display:none;
position:fixed;
top:0;
left:0;
width:100%;
height:100%;
background:rgba(0,0,0,0.85);
z-index:5000;
}

.bonus-content{
width:300px;
margin:15% auto;
background:white;
color:black;
padding:20px;
border-radius:12px;
position:relative;
}

.close{
position:absolute;
top:8px;
right:10px;
font-size:22px;
cursor:pointer;
}



/* bottone live- pop up */

.bottone-live{
display:block;
width:fit-content;
margin:20px auto;
padding:12px 18px;
background:#00ff88;
color:black;
font-weight:bold;
border-radius:12px;
text-decoration:none;
text-align:center;
}

.popup-classifica{
display:none;
position:fixed;
top:0;
left:0;
width:100%;
height:100%;
background:rgba(0,0,0,0.85);
z-index:9999;
}

.popup-classifica:target{
display:block;
}

.popup-content{
width:80%;
height:80%;
margin:5% auto;
background:white;
position:relative;
border-radius:12px;
overflow:hidden;
}

.popup-content iframe{
width:100%;
height:100%;
border:none;
}

.tasto-chiusura-iframe{
position:absolute;
top:10px;
right:15px;
font-size:30px;
text-decoration:none;
color:black;
font-weight:bold;
}



/* serie a */
.squadra{
width:90%;
margin:20px auto;
background:rgba(255,255,255,0.08);
padding:20px;
border-radius:15px;
}

.menu a{
display:inline-block;
margin:5px;
padding:10px;
background:#00ff88;
color:black;
border-radius:10px;
text-decoration:none;
font-weight:bold;
}

.contenuto{
display:none;
margin-top:15px;
}
.contenuto:target{display:block}

.logo{
width:60px;
height:60px;
object-fit:contain;
display:inline-block;}


   

/* game(parte casino)  */
.game{
display:none;
position:fixed;
top:0;
left:0;
width:100%;
height:100%;
background:rgba(0,0,0,0.85);
z-index:4000;
}

.box{
width:80%;
margin:5% auto;
background:white;
color:black;
padding:20px;
border-radius:12px;
position:relative;
}

/* Blackjack */
.table{
display:flex;
justify-content:space-between;
gap:20px;
}

.side{
width:48%;
background:#f5f5f5;
border-radius:10px;
padding:10px;
}

.side h3{
text-align:center;
background:#00ff88;
color:black;
padding:5px;
border-radius:8px;
}

.cards{
display:flex;
gap:10px;
justify-content:center;
flex-wrap:wrap;
margin-top:10px;
}

.carta{
width:60px;
height:90px;
background:white;
color:black;
display:flex;
align-items:center;
justify-content:center;
border-radius:10px;
font-weight:bold;
}




/* slot */
.slot{
display:flex;
justify-content:center;
gap:18px;
margin:25px 0;
padding:20px;
background:#1b1b1b;
border-radius:20px;
border:3px solid gold;
box-shadow:
0 0 20px rgba(255,215,0,.5),
inset 0 0 15px rgba(255,255,255,.1);
}

.reel{
width:90px;
height:100px;

background:linear-gradient(
to bottom,
#ffffff,
#e7e7e7
);

border:4px solid #d4af37;

border-radius:14px;

display:flex;
align-items:center;
justify-content:center;

font-size:48px;

box-shadow:
0 4px 10px rgba(0,0,0,.5),
inset 0 0 10px rgba(255,255,255,.6);

overflow:hidden;

position:relative;
}

.reel::before{
content:"";
position:absolute;

top:0;
left:0;

width:100%;
height:25%;

background:rgba(255,255,255,.35);
}

/* input */
input{
padding:8px;
margin:5px;
border-radius:6px;
border:1px solid #ccc;
}

input:focus{
outline:none;
border-color:#00ff88;
box-shadow:0 0 5px #00ff88;
}

